// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cohort data filtered by locality 1`] = `
Array [
  Object {
    "label": "Aug 2017",
    "locality": "NORTHEAST",
    "month": 8,
    "rate": 0.3448275862068966,
    "rateDenominator": 29,
    "rateNumerator": 10,
    "year": 2017,
  },
  Object {
    "label": "Sep 2017",
    "locality": "NORTHEAST",
    "month": 9,
    "rate": 0.47368421052631576,
    "rateDenominator": 19,
    "rateNumerator": 9,
    "year": 2017,
  },
  Object {
    "label": "Oct 2017",
    "locality": "NORTHEAST",
    "month": 10,
    "rate": 0.5555555555555556,
    "rateDenominator": 27,
    "rateNumerator": 15,
    "year": 2017,
  },
  Object {
    "label": "Nov 2017",
    "locality": "NORTHEAST",
    "month": 11,
    "rate": 0.24,
    "rateDenominator": 25,
    "rateNumerator": 6,
    "year": 2017,
  },
  Object {
    "label": "Dec 2017",
    "locality": "NORTHEAST",
    "month": 12,
    "rate": 0.30434782608695654,
    "rateDenominator": 23,
    "rateNumerator": 7,
    "year": 2017,
  },
  Object {
    "label": "Jan 2018",
    "locality": "NORTHEAST",
    "month": 1,
    "rate": 0.3023255813953488,
    "rateDenominator": 43,
    "rateNumerator": 13,
    "year": 2018,
  },
  Object {
    "label": "Feb 2018",
    "locality": "NORTHEAST",
    "month": 2,
    "rate": 0.6551724137931034,
    "rateDenominator": 29,
    "rateNumerator": 19,
    "year": 2018,
  },
  Object {
    "label": "Mar 2018",
    "locality": "NORTHEAST",
    "month": 3,
    "rate": 0.52,
    "rateDenominator": 25,
    "rateNumerator": 13,
    "year": 2018,
  },
  Object {
    "label": "Apr 2018",
    "locality": "NORTHEAST",
    "month": 4,
    "rate": 0.7916666666666666,
    "rateDenominator": 24,
    "rateNumerator": 19,
    "year": 2018,
  },
  Object {
    "label": "May 2018",
    "locality": "NORTHEAST",
    "month": 5,
    "rate": 0.3333333333333333,
    "rateDenominator": 42,
    "rateNumerator": 14,
    "year": 2018,
  },
  Object {
    "label": "Jun 2018",
    "locality": "NORTHEAST",
    "month": 6,
    "rate": 0.45161290322580644,
    "rateDenominator": 31,
    "rateNumerator": 14,
    "year": 2018,
  },
  Object {
    "label": "Jul 2018",
    "locality": "NORTHEAST",
    "month": 7,
    "rate": 0.42857142857142855,
    "rateDenominator": 21,
    "rateNumerator": 9,
    "year": 2018,
  },
  Object {
    "label": "Aug 2018",
    "locality": "NORTHEAST",
    "month": 8,
    "rate": 0.4,
    "rateDenominator": 10,
    "rateNumerator": 4,
    "year": 2018,
  },
  Object {
    "label": "Sep 2018",
    "locality": "NORTHEAST",
    "month": 9,
    "rate": 0.5263157894736842,
    "rateDenominator": 38,
    "rateNumerator": 20,
    "year": 2018,
  },
  Object {
    "label": "Oct 2018",
    "locality": "NORTHEAST",
    "month": 10,
    "rate": 0.4444444444444444,
    "rateDenominator": 18,
    "rateNumerator": 8,
    "year": 2018,
  },
  Object {
    "label": "Nov 2018",
    "locality": "NORTHEAST",
    "month": 11,
    "rate": 0.45,
    "rateDenominator": 40,
    "rateNumerator": 18,
    "year": 2018,
  },
  Object {
    "label": "Dec 2018",
    "locality": "NORTHEAST",
    "month": 12,
    "rate": 0.5277777777777778,
    "rateDenominator": 36,
    "rateNumerator": 19,
    "year": 2018,
  },
  Object {
    "label": "Jan 2019",
    "locality": "NORTHEAST",
    "month": 1,
    "rate": 0.47058823529411764,
    "rateDenominator": 34,
    "rateNumerator": 16,
    "year": 2019,
  },
  Object {
    "label": "Feb 2019",
    "locality": "NORTHEAST",
    "month": 2,
    "rate": 0.391304347826087,
    "rateDenominator": 23,
    "rateNumerator": 9,
    "year": 2019,
  },
  Object {
    "label": "Mar 2019",
    "locality": "NORTHEAST",
    "month": 3,
    "rate": 0.4827586206896552,
    "rateDenominator": 29,
    "rateNumerator": 14,
    "year": 2019,
  },
  Object {
    "label": "Apr 2019",
    "locality": "NORTHEAST",
    "month": 4,
    "rate": 0.4583333333333333,
    "rateDenominator": 24,
    "rateNumerator": 11,
    "year": 2019,
  },
  Object {
    "label": "May 2019",
    "locality": "NORTHEAST",
    "month": 5,
    "rate": 0.325,
    "rateDenominator": 40,
    "rateNumerator": 13,
    "year": 2019,
  },
  Object {
    "label": "Jun 2019",
    "locality": "NORTHEAST",
    "month": 6,
    "rate": 0.4117647058823529,
    "rateDenominator": 17,
    "rateNumerator": 7,
    "year": 2019,
  },
  Object {
    "label": "Jul 2019",
    "locality": "NORTHEAST",
    "month": 7,
    "rate": 0.3939393939393939,
    "rateDenominator": 33,
    "rateNumerator": 13,
    "year": 2019,
  },
  Object {
    "label": "Aug 2019",
    "locality": "NORTHEAST",
    "month": 8,
    "rate": 0.45454545454545453,
    "rateDenominator": 33,
    "rateNumerator": 15,
    "year": 2019,
  },
  Object {
    "label": "Sep 2019",
    "locality": "NORTHEAST",
    "month": 9,
    "rate": 0.38461538461538464,
    "rateDenominator": 26,
    "rateNumerator": 10,
    "year": 2019,
  },
  Object {
    "label": "Oct 2019",
    "locality": "NORTHEAST",
    "month": 10,
    "rate": 0.4473684210526316,
    "rateDenominator": 38,
    "rateNumerator": 17,
    "year": 2019,
  },
  Object {
    "label": "Nov 2019",
    "locality": "NORTHEAST",
    "month": 11,
    "rate": 0.32,
    "rateDenominator": 25,
    "rateNumerator": 8,
    "year": 2019,
  },
  Object {
    "label": "Dec 2019",
    "locality": "NORTHEAST",
    "month": 12,
    "rate": 0.4,
    "rateDenominator": 25,
    "rateNumerator": 10,
    "year": 2019,
  },
  Object {
    "label": "Jan 2020",
    "locality": "NORTHEAST",
    "month": 1,
    "rate": 0.35,
    "rateDenominator": 40,
    "rateNumerator": 14,
    "year": 2020,
  },
  Object {
    "label": "Feb 2020",
    "locality": "NORTHEAST",
    "month": 2,
    "rate": 0.45454545454545453,
    "rateDenominator": 22,
    "rateNumerator": 10,
    "year": 2020,
  },
  Object {
    "label": "Mar 2020",
    "locality": "NORTHEAST",
    "month": 3,
    "rate": 0.3333333333333333,
    "rateDenominator": 24,
    "rateNumerator": 8,
    "year": 2020,
  },
  Object {
    "label": "Apr 2020",
    "locality": "NORTHEAST",
    "month": 4,
    "rate": 0.41935483870967744,
    "rateDenominator": 31,
    "rateNumerator": 13,
    "year": 2020,
  },
  Object {
    "label": "May 2020",
    "locality": "NORTHEAST",
    "month": 5,
    "rate": 0.36666666666666664,
    "rateDenominator": 30,
    "rateNumerator": 11,
    "year": 2020,
  },
  Object {
    "label": "Jun 2020",
    "locality": "NORTHEAST",
    "month": 6,
    "rate": 0.3333333333333333,
    "rateDenominator": 9,
    "rateNumerator": 3,
    "year": 2020,
  },
  Object {
    "label": "Jul 2020",
    "locality": "NORTHEAST",
    "month": 7,
    "rate": 0.125,
    "rateDenominator": 8,
    "rateNumerator": 1,
    "year": 2020,
  },
]
`;

exports[`cohort data total 1`] = `
Array [
  Object {
    "label": "Aug 2017",
    "locality": "ALL",
    "month": 8,
    "rate": 0.5205479452054794,
    "rateDenominator": 365,
    "rateNumerator": 190,
    "year": 2017,
  },
  Object {
    "label": "Sep 2017",
    "locality": "ALL",
    "month": 9,
    "rate": 0.5802469135802469,
    "rateDenominator": 324,
    "rateNumerator": 188,
    "year": 2017,
  },
  Object {
    "label": "Oct 2017",
    "locality": "ALL",
    "month": 10,
    "rate": 0.536723163841808,
    "rateDenominator": 354,
    "rateNumerator": 190,
    "year": 2017,
  },
  Object {
    "label": "Nov 2017",
    "locality": "ALL",
    "month": 11,
    "rate": 0.5056179775280899,
    "rateDenominator": 445,
    "rateNumerator": 225,
    "year": 2017,
  },
  Object {
    "label": "Dec 2017",
    "locality": "ALL",
    "month": 12,
    "rate": 0.49056603773584906,
    "rateDenominator": 318,
    "rateNumerator": 156,
    "year": 2017,
  },
  Object {
    "label": "Jan 2018",
    "locality": "ALL",
    "month": 1,
    "rate": 0.5348837209302325,
    "rateDenominator": 559,
    "rateNumerator": 299,
    "year": 2018,
  },
  Object {
    "label": "Feb 2018",
    "locality": "ALL",
    "month": 2,
    "rate": 0.5067961165048543,
    "rateDenominator": 515,
    "rateNumerator": 261,
    "year": 2018,
  },
  Object {
    "label": "Mar 2018",
    "locality": "ALL",
    "month": 3,
    "rate": 0.5607476635514018,
    "rateDenominator": 428,
    "rateNumerator": 240,
    "year": 2018,
  },
  Object {
    "label": "Apr 2018",
    "locality": "ALL",
    "month": 4,
    "rate": 0.5603217158176944,
    "rateDenominator": 373,
    "rateNumerator": 209,
    "year": 2018,
  },
  Object {
    "label": "May 2018",
    "locality": "ALL",
    "month": 5,
    "rate": 0.5354200988467874,
    "rateDenominator": 607,
    "rateNumerator": 325,
    "year": 2018,
  },
  Object {
    "label": "Jun 2018",
    "locality": "ALL",
    "month": 6,
    "rate": 0.5594936708860759,
    "rateDenominator": 395,
    "rateNumerator": 221,
    "year": 2018,
  },
  Object {
    "label": "Jul 2018",
    "locality": "ALL",
    "month": 7,
    "rate": 0.5414507772020726,
    "rateDenominator": 386,
    "rateNumerator": 209,
    "year": 2018,
  },
  Object {
    "label": "Aug 2018",
    "locality": "ALL",
    "month": 8,
    "rate": 0.5594713656387665,
    "rateDenominator": 227,
    "rateNumerator": 127,
    "year": 2018,
  },
  Object {
    "label": "Sep 2018",
    "locality": "ALL",
    "month": 9,
    "rate": 0.5148514851485149,
    "rateDenominator": 303,
    "rateNumerator": 156,
    "year": 2018,
  },
  Object {
    "label": "Oct 2018",
    "locality": "ALL",
    "month": 10,
    "rate": 0.5517241379310345,
    "rateDenominator": 261,
    "rateNumerator": 144,
    "year": 2018,
  },
  Object {
    "label": "Nov 2018",
    "locality": "ALL",
    "month": 11,
    "rate": 0.49875311720698257,
    "rateDenominator": 401,
    "rateNumerator": 200,
    "year": 2018,
  },
  Object {
    "label": "Dec 2018",
    "locality": "ALL",
    "month": 12,
    "rate": 0.5188284518828452,
    "rateDenominator": 239,
    "rateNumerator": 124,
    "year": 2018,
  },
  Object {
    "label": "Jan 2019",
    "locality": "ALL",
    "month": 1,
    "rate": 0.5625,
    "rateDenominator": 192,
    "rateNumerator": 108,
    "year": 2019,
  },
  Object {
    "label": "Feb 2019",
    "locality": "ALL",
    "month": 2,
    "rate": 0.4907749077490775,
    "rateDenominator": 271,
    "rateNumerator": 133,
    "year": 2019,
  },
  Object {
    "label": "Mar 2019",
    "locality": "ALL",
    "month": 3,
    "rate": 0.5683836589698046,
    "rateDenominator": 563,
    "rateNumerator": 320,
    "year": 2019,
  },
  Object {
    "label": "Apr 2019",
    "locality": "ALL",
    "month": 4,
    "rate": 0.5382932166301969,
    "rateDenominator": 457,
    "rateNumerator": 246,
    "year": 2019,
  },
  Object {
    "label": "May 2019",
    "locality": "ALL",
    "month": 5,
    "rate": 0.5552825552825553,
    "rateDenominator": 407,
    "rateNumerator": 226,
    "year": 2019,
  },
  Object {
    "label": "Jun 2019",
    "locality": "ALL",
    "month": 6,
    "rate": 0.5763546798029556,
    "rateDenominator": 203,
    "rateNumerator": 117,
    "year": 2019,
  },
  Object {
    "label": "Jul 2019",
    "locality": "ALL",
    "month": 7,
    "rate": 0.5150300601202404,
    "rateDenominator": 499,
    "rateNumerator": 257,
    "year": 2019,
  },
  Object {
    "label": "Aug 2019",
    "locality": "ALL",
    "month": 8,
    "rate": 0.5728643216080402,
    "rateDenominator": 597,
    "rateNumerator": 342,
    "year": 2019,
  },
  Object {
    "label": "Sep 2019",
    "locality": "ALL",
    "month": 9,
    "rate": 0.5243362831858407,
    "rateDenominator": 452,
    "rateNumerator": 237,
    "year": 2019,
  },
  Object {
    "label": "Oct 2019",
    "locality": "ALL",
    "month": 10,
    "rate": 0.5720930232558139,
    "rateDenominator": 430,
    "rateNumerator": 246,
    "year": 2019,
  },
  Object {
    "label": "Nov 2019",
    "locality": "ALL",
    "month": 11,
    "rate": 0.5731225296442688,
    "rateDenominator": 506,
    "rateNumerator": 290,
    "year": 2019,
  },
  Object {
    "label": "Dec 2019",
    "locality": "ALL",
    "month": 12,
    "rate": 0.5694444444444444,
    "rateDenominator": 360,
    "rateNumerator": 205,
    "year": 2019,
  },
  Object {
    "label": "Jan 2020",
    "locality": "ALL",
    "month": 1,
    "rate": 0.5425531914893617,
    "rateDenominator": 470,
    "rateNumerator": 255,
    "year": 2020,
  },
  Object {
    "label": "Feb 2020",
    "locality": "ALL",
    "month": 2,
    "rate": 0.5577689243027888,
    "rateDenominator": 251,
    "rateNumerator": 140,
    "year": 2020,
  },
  Object {
    "label": "Mar 2020",
    "locality": "ALL",
    "month": 3,
    "rate": 0.46303501945525294,
    "rateDenominator": 257,
    "rateNumerator": 119,
    "year": 2020,
  },
  Object {
    "label": "Apr 2020",
    "locality": "ALL",
    "month": 4,
    "rate": 0.523121387283237,
    "rateDenominator": 346,
    "rateNumerator": 181,
    "year": 2020,
  },
  Object {
    "label": "May 2020",
    "locality": "ALL",
    "month": 5,
    "rate": 0.537864077669903,
    "rateDenominator": 515,
    "rateNumerator": 277,
    "year": 2020,
  },
  Object {
    "label": "Jun 2020",
    "locality": "ALL",
    "month": 6,
    "rate": 0.4175824175824176,
    "rateDenominator": 182,
    "rateNumerator": 76,
    "year": 2020,
  },
  Object {
    "label": "Jul 2020",
    "locality": "ALL",
    "month": 7,
    "rate": 0.43529411764705883,
    "rateDenominator": 85,
    "rateNumerator": 37,
    "year": 2020,
  },
]
`;

exports[`demographic data ageBucket data 1`] = `
Array [
  Object {
    "label": "<25",
    "rate": 0.49851455733808675,
    "rateDenominator": 1683,
    "rateNumerator": 839,
  },
  Object {
    "label": "25-29",
    "rate": 0.5110088728228722,
    "rateDenominator": 3043,
    "rateNumerator": 1555,
  },
  Object {
    "label": "30-34",
    "rate": 0.5337026777469991,
    "rateDenominator": 1083,
    "rateNumerator": 578,
  },
  Object {
    "label": "35-39",
    "rate": 0.5302879841112215,
    "rateDenominator": 1007,
    "rateNumerator": 534,
  },
  Object {
    "label": "40+",
    "rate": 0.6179775280898876,
    "rateDenominator": 2225,
    "rateNumerator": 1375,
  },
]
`;

exports[`demographic data filtered by locality 1`] = `
Array [
  Object {
    "label": "Total",
    "rate": 0.44340505144995324,
    "rateDenominator": 1069,
    "rateNumerator": 474,
  },
]
`;

exports[`demographic data gender data 1`] = `
Array [
  Object {
    "label": "Male",
    "rate": 0.5458256787099408,
    "rateDenominator": 4899,
    "rateNumerator": 2674,
  },
  Object {
    "label": "Female",
    "rate": 0.5593275137407048,
    "rateDenominator": 3093,
    "rateNumerator": 1730,
  },
]
`;

exports[`demographic data raceOrEthnicity data 1`] = `
Array [
  Object {
    "label": "Native American",
    "rate": 0.3431667670078266,
    "rateDenominator": 1661,
    "rateNumerator": 570,
  },
  Object {
    "label": "Black",
    "rate": 0.5180180180180181,
    "rateDenominator": 666,
    "rateNumerator": 345,
  },
  Object {
    "label": "Hispanic",
    "rate": 0.5048732943469786,
    "rateDenominator": 513,
    "rateNumerator": 259,
  },
  Object {
    "label": "White",
    "rate": 0.5991040318566451,
    "rateDenominator": 10045,
    "rateNumerator": 6018,
  },
  Object {
    "label": "Other",
    "rate": 0.5443037974683544,
    "rateDenominator": 79,
    "rateNumerator": 43,
  },
]
`;

exports[`demographic data total 1`] = `
Array [
  Object {
    "label": "Total",
    "rate": 0.549307774227902,
    "rateDenominator": 9390,
    "rateNumerator": 5158,
  },
]
`;
